@@ -1,10 +1,10 @@
-#	$NetBSD: Makefile,v 1.66 2007/06/15 23:04:21 jmcneill Exp $
+#	$NetBSD: Makefile,v 1.67 2007/06/27 23:02:53 xtraeme Exp $
 #	from: @(#)Makefile	8.1 (Berkeley) 6/5/93
 
 MAN=	apm.4 autoconf.4 \
 	cmos.4 console.4 \
 	elansc.4 fdc.4 \
-	geodewdog.4 geodecntr.4 glxsb.4 gscpcib.4 \
+	gcscide.4 geodewdog.4 geodecntr.4 glxsb.4 gscpcib.4 \
 	intro.4 io.4 lms.4 lpt.4 mem.4 mms.4 npx.4 ndis.4 \
 	pcibios.4 pnpbios.4 sony.4 spic.4 vald.4 \
 	vesafb.4
